<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/ActivityHorizontalLayout">

        <TextView
            android:id="@+id/millimeterLabel"
            style="@style/ActivityLabelStyle"
            android:text="@string/millimeterName" />

        <EditText
            android:id="@+id/millimeterInput"
            style="@style/ActivityInputStyle" />
    </LinearLayout>

    <LinearLayout
        style="@style/ActivityHorizontalLayout">

        <TextView
            android:id="@+id/centimeterLabel"
            style="@style/ActivityLabelStyle"
            android:text="@string/centimeterName" />

        <EditText
            android:id="@+id/centimeterInput"
            style="@style/ActivityInputStyle" />
    </LinearLayout>

    <LinearLayout
        style="@style/ActivityHorizontalLayout">

        <TextView
            android:id="@+id/meterLabel"
            style="@style/ActivityLabelStyle"
            android:text="@string/meterName" />

        <EditText
            android:id="@+id/meterInput"
            style="@style/ActivityInputStyle" />
    </LinearLayout>

    <LinearLayout
        style="@style/ActivityHorizontalLayout">

        <TextView
            android:id="@+id/inchLabel"
            style="@style/ActivityLabelStyle"
            android:text="@string/inchName" />

        <EditText
            android:id="@+id/inchInput"
            style="@style/ActivityInputStyle" />
    </LinearLayout>

    <LinearLayout
        style="@style/ActivityHorizontalLayout">

        <TextView
            android:id="@+id/footLabel"
            style="@style/ActivityLabelStyle"
            android:text="@string/footName" />

        <EditText
            android:id="@+id/footInput"
            style="@style/ActivityInputStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/convertButton"
        style="@style/ActivityButtonStyle"
        android:onClick="convertButtonClicked"
        android:text="@string/convertButton" />

    <Button
        android:id="@+id/refreshButton"
        style="@style/ActivityButtonStyle"
        android:onClick="refreshButtonClicked"
        android:text="@string/refreshButton" />

</LinearLayout>